overlapping sections fix

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -85,6 +85,7 @@ div.container > header {
 //  min-height: 250px;
   position: relative;
   article {
+    clear: both; 
     header {
       width: 100%;
       height: 100%;
